feat: add api backend url

--- a/web/web/.env/.env.local
+++ b/web/web/.env/.env.local
@@ -1,3 +1,4 @@
 APP_NAME="web"
 APP_URL="http://localhost"
 ADMIN_EMAIL="alberto@agonza.net"
+CLOUDREGIONCODESAPI_URL="https://api.cloudregion.codes/v1/"
