--- a/web/web/.env/.env.prod
+++ b/web/web/.env/.env.prod
@@ -1,3 +1,4 @@
 APP_NAME="CloudRegion Codes"
 APP_URL="https://www.cloudregion.codes"
 ADMIN_EMAIL="alberto@agonza.net"
+CLOUDREGIONCODESAPI_URL="https://api.cloudregion.codes/v1/"
